--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -38,9 +38,12 @@
         <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
       </li>                         
       {% else %}
-      <span><a href="{% url 'login' %}" >Login</a></span>
-      <span> | </span>
-      <span><a href="{% url 'signup' %}">SignUp</a></span>
+      <li class="nav-item">
+        <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
+      </li>       
+      <li class="ml-2 nav-item">
+        <a class="btn btn-outline-warning" href="{% url 'signup' %}">SignUp</a>
+      </li>   
       {% endif %}  
     </ul>
 
@@ -54,9 +57,7 @@
     {% endblock %}
     <div id="footer" class="mt-3">
 
-        <footer style="position: fixed;
-        left: 0;
-        bottom: 0;
+        <footer style="        
         width: 100%;
         color: white;
         text-align: center;"  class="bg-dark p-3 text-center text-white">
