--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -60,8 +60,10 @@
             </div>
           </div>
           <!-- <a href="/result/"><button type="submit" onclick=showPosition()> Submit</button></a> -->
-          <a><button id="nextbtn" type="next" class="next round" style ="text-decoration: none;
+          <a><button id="nextbtn" type="next" class="next round" style ="text-decoration: none; 
             display: inline-block;
+            margin-left: 30px;
+            margin-bottom: 10px;
             padding: 8px 16px" onclick=next()> &#8250;</button></a>
           <!-- <a href="#" class="next round">&#8250;</a> -->
         </div>
