make some changes (#39)

--- a/quizapp/main_app/templates/Questions.html
+++ b/quizapp/main_app/templates/Questions.html
@@ -7,7 +7,7 @@
   <div>
     <div class="container">
       <div class="header text-center mb-5">
-        <h3 class="p-3 text-center bg-primary text-white">
+        <h2 class="p-3 text-center bg-primary text-white mt-2" style="border-radius: 10px;background: linear-gradient(to right, #c4d7e5 0%, #0266e9 100%);;">
           {{category}}
         </h3>
       </div>
