--- a/quizapp/main_app/templates/welcome.html
+++ b/quizapp/main_app/templates/welcome.html
@@ -18,8 +18,8 @@
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1>Welcome To Our Quiz  app</h1>
       <h2> Challenge your Self & Put Your Knowledge To The Test With This Fun Quiz!  </h2>
-      <a href="{% url 'login' %}" class="btn-get-started scrollto">Sign in</a>
-      <img src="{% static 'assets/img/hero-img.png' %}" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
+      <a href="{% url 'category' %}" class="btn-get-started scrollto">Get Started</a>
+      <img src="{% static 'assets/img/hero.png' %}" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
   </section><!-- End Hero -->
