--- a/quizapp/main_app/templates/test.html
+++ b/quizapp/main_app/templates/test.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
 <body>
   <audio id="CorrectAnswer" src="https://www.dropbox.com/s/corq44j1xt6wmk3/water.mp3?dl=1"></audio>
   <audio id="WrongAnswer" src="https://www.dropbox.com/s/xxx4y9wbiabslrq/Tie.mp3?dl=1"></audio>
@@ -9,22 +8,21 @@
     <div class="container">
       <div class="header text-center mb-5">
         <h3 class="p-3 text-center bg-primary text-white">
-          {{category}}
+         SEI-14
         </h3>
       </div>
       <div class="row">
         <div class="col-12 mb-2">
           <div class="d-flex align-items-center p-1" style="margin-left: 9px; border-bottom: 2px solid #ddd">
             <i class="fas font-weight-bold text-danger fa-question mr-3" style="font-size: 2rem"></i>
-            <!-- <h1 id ="Timer"></h1> -->
-            <!-- <h5 id="question">{{question}}</h5> -->
+     
             <h5 id="question"> Loading... </h5>
           </div>
         </div>
       </div>
       <div class="menu_item">
         <div class="row">
-          <div class=" AnswersD col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
+          <div class="AnswersD AnswersD1 col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
             <div style="
                 width: 95%;
                 font-weight: 600;
@@ -33,7 +31,7 @@
               <p id="ans1" id='click'> Loading... </p>
             </div>
           </div>
-          <div class=" AnswersD col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
+          <div class="AnswersD AnswersD2 col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
             <div style="
                 width: 95%;
                 font-weight: 600;
@@ -42,7 +40,7 @@
               <p id="ans2" id='click'> Loading... </p>
             </div>
           </div>
-          <div class=" AnswersD col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
+          <div class="AnswersD AnswersD3 col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
             <div style="
                 width: 95%;
                 font-weight: 600;
@@ -51,7 +49,7 @@
               <p id="ans3" id='click'> Loading... </p>
             </div>
           </div>
-          <div class=" AnswersD col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
+          <div class="AnswersD AnswersD4 col-12 col-sm-6 mb-3 d-flex justify-content-center align-items-center" id="AnswersDiv">
             <div style="
                 width: 95%;
                 font-weight: 600;
@@ -60,12 +58,13 @@
               <p id="ans4" id='click'> Loading... </p>
             </div>
           </div>
-          <!-- <p id='click'> {{ correct_answer }}</p> -->
-          <p id='click'> </p>
-          <!-- <a href="/result/"><button type="submit" onclick=showPosition()> Submit</button></a> -->
-          <a><button id="nextbtn" type="next" onclick=next()> next</button></a>
-
-
+      
+          <a><button id="nextbtn" type="next" class="next round" style ="text-decoration: none; 
+            display: inline-block;
+            margin-left: 30px;
+            margin-bottom: 10px;
+            padding: 8px 16px" onclick=next()> &#8250;</button></a>
+         
         </div>
       </div>
       <div class="row">
@@ -89,13 +88,12 @@
                   <div style="width: 150px; height: 150px;" class="m-auto">
                     <img style="width: 100%;" src="{% static 'help.jpg' %}" alt="img" />
                   </div>
-                  <p class="text-center font-weight-bold" style="margin-bottom: 0;">
+                  <h4 id="helpp" class="text-center font-weight-bold" style="margin-bottom: 0;">
                     Are you sure you need help?
-                  </p>
+                  </h4>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-success">Yes</button>                 
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>                 
+                  <button type="button" class="btn btn-success" data-dismiss="modal">Ok</button>                
                 </div>
               </div>
             </div>
@@ -103,92 +101,118 @@
         </div>
       </div>
     </div>
-
 </body>
-</div>
-<script>
 
+<script>
   const ran = () => {
     return Math.floor(1 + Math.random() * 4)
   }
+  var qq = '{{q}}'.replace('&lt;QuerySet [',' ').replace(']&gt;',' ')
+  var sei_q=qq.split(',')
   var rann = []
-  var all
-  var cate
-  var diff
-  // window.onload = function () {
-    $.ajax({
-      // headers: { "X-CSRFToken": token },
-      type: 'GET',
-      url: 'https://opentdb.com/api.php?amount=5&category={{ category_num }}&difficulty={{ dif }}&type=multiple',
-      contentType: 'application/json; charset=utf-8',
-      success: function (result) {
-        cate = result.results[0].category
-        diff = result.results[0].difficulty
-        all = result.results
-        $('#question')[0].innerHTML = all[0].question
-        $('#click')[0].innerHTML = all[0].correct_answer
-        var temp = ran()
-        rann.push(temp)
-        $('#ans' + temp)[0].innerHTML = all[0].correct_answer
-        for (let i = 0; i < 3; i++) {
-          temp1 = ran()
-          while (rann.includes(temp1) && rann.length < 4) {
-            temp1 = ran()
+  var done = true;
+  console.log(sei_q)
+  $('#question')[0].innerHTML = sei_q[0]
+  for (let i = 1; i <= 4; i++) {
+        console.log( $('#ans'+i))
+            $('#ans'+i)[0].innerHTML = sei_q[i]
           }
-          rann.push(temp1)
-          $('#ans' + temp1)[0].innerHTML = all[0].incorrect_answers[i]
-        }
-        console.log("score: ", score)
-      }
-    })
-    // for (let i = 1; i < 5; i++) {
-    //   document.getElementById('ans'+i).innerHTML = ;
-    // }
-  // };
-  var page = 1
+     
+  var counter=5
+  var page = 2
   var score = 0;
+  
+  var clickedd=1
   const next = () => {
+    console.log("page: ", page)
+    var c =counter+4
+    clickedd++
+    // var tempp = ran()
+    // rann.push(tempp)
     if (!done) {
-      var temp2 = ran()
-      rann = []
+      console.log('اي شي')
+      $('#question')[0].innerHTML = sei_q[counter]
+      counter++
+      console.log(c)
+    for (let i = counter; i <= c; i++) {
+        
+        console.log('ccccccccccccccc')
+
+        if(rann.length < 4)
+            temp2 = ran()
+          while (rann.includes(temp2) && rann.length < 4) {
+            temp2 = ran()
+          }
+          rann.push(temp2)
+          $('#ans' + temp2)[0].innerHTML = sei_q[i]
+          console.log('iii',i)
+            counter++
+            console.log('inner counter',counter)
+          console.log('Rann',rann)
+          }
+          rann = []
+          console.log('out counter',counter)
+
+         
+      // var temp2 = ran()
       $(".correct div").css("background-color", "");
       $(".wrong div").css("background-color", "");
       $(".wrong").removeClass("wrong")
       $(".correct").removeClass("correct")
       clicked()
-      if (page <= 4) {
-        $('#question')[0].innerHTML = all[page].question
-        $('#click')[0].innerHTML = all[page].correct_answer
-        var tempp = ran()
-        rann.push(tempp)
-        $('#ans' + tempp)[0].innerHTML = all[page].correct_answer
-        console.log("correct", all[page].correct_answer)
-        for (let i = 0; i < 3; i++) {
-          temp2 = ran()
-          while (rann.includes(temp2) && rann.length < 4) {
-            temp2 = ran()
-          }
-          rann.push(temp2)
-
-          $('#ans' + temp2)[0].innerHTML = all[page].incorrect_answers[i]
-        }
-
-      }
+      // if (page <= 5) {
+      //   $('#question')[0].innerHTML = all[5].question
+      //   var tempp = ran()
+      //   rann.push(tempp)
+      //   $('#ans' + tempp)[0].innerHTML = all[6].correct_answer
+      //   console.log("correct", all[page].correct_answer)
+      //   for (let i = 7; i < 10; i++) {
+      //     temp2 = ran()
+      //     while (rann.includes(temp2) && rann.length < 4) {
+      //       temp2 = ran()
+      //     }
+      //     rann.push(temp2)
+      //     $('#ans' + temp2)[0].innerHTML = all[i].incorrect_answers[i]
+      //   }
+      // }
       if (page >= 4) {
         $("#nextbtn")[0].innerHTML = "result"
       }
       if (page == 5)
-        window.location.replace("/result/" + score + "/" + cate);
+        window.location.replace("/result/" + score + "/" + 'SEI-14');
       page++
+      
       console.log("score: ", score)
+      console.log("page: ", page)
     } else {
       alert("You have to choose an answer")
     }
-
   }
   // console.log('{{questions}}')
-  var done = true;
+
   $('div.AnswersD').click(function (event) {
+    var temp
+      switch (clickedd) {
+        case 1:
+          temp=1
+          break;
+        case 2:
+          temp=6
+          break;
+        case 3:
+          temp=11
+          break;
+        case 4:
+          temp=16
+          break;
+        case 5:
+          temp=21
+          break;
+      
+        default:
+          break;
+      }
+    console.log(done)
     // Don't follow the linkt
     if (done) {
       clicked()
@@ -197,42 +221,34 @@
       console.log(event.target.innerText);
       ans = event.target.innerText
       console.log(ans, page, "LLLlllllll")
-      if (ans === all[page - 1].correct_answer) {
-        switch (diff) {
-          case "easy":
+      
+      if (ans === sei_q[temp]) {
+        
             score += 1
-            break;
-          case "medium":
-            score += 3
-            break;
-          case "hard":
-            score += 5
-            break;
-
-          default:
-            break;
-        }
-
-        console.log('TRUE');
-        console.log(this);
+      
+       
         $(this).addClass("correct")
         $(".correct div").css("background-color", "green");
-        // event.target.style.backgroundColor = 'Green';
-        // document.querySelector("#AnswersDiv").style.backgroundColor = 'Green';
-        document.querySelector("#CorrectAnswer").play()
 
-        // location.reload();
+        document.querySelector("#CorrectAnswer").play()
+      
       }
       else {
         console.log('FALSE')
         console.log(done)
         $(this).addClass("wrong")
         $(".wrong div").css("background-color", "red");
+        for (let i = 1; i < 5; i++) {
+          if($('div.AnswersD'+i)[0].innerText ==  sei_q[temp]){
+            $('div.AnswersD'+i).addClass("correct")
+          }
+        }
+        $('.correct div').css("background-color", "green");
         // event.target.style.backgroundColor = 'Red';
         document.querySelector("#WrongAnswer").play()
         // location.reload();
-
       }
+
     } else {
       console.log("cant click again")
     }
@@ -246,11 +262,10 @@
   $('#help').click(function (event) {
     console.log($('div.AnswersD')[0].innerText)
     event.preventDefault();
-
-
     // if ( r != all[page].correct_answer) {
     console.log(r)
     // alert('wrong answer => '+ rr)
+    $('#helpp')[0].innerHTML = "don't choose => "+ all[page - 1].incorrect_answers[r]
     console.log('wrong answer => ', all[page - 1].incorrect_answers[r])
     // }
     // $.ajax({
@@ -260,14 +275,10 @@
     //   contentType: 'application/json; charset=utf-8',
     //   success: function (result) { console.log('hhhhhhhhhhhhhhhhhhhhhhhhhhhhffffffffffffffffffffff', result.results) }
     // });
-
   })
-
   //  function showPosition(){
   //   var data = {"no": "800", "category": '{{category}}'};
   //     var token = '{{csrf_token}}';
-
-
   // $.ajax({
   //     headers: { "X-CSRFToken": token },
   //     type: 'POST',
@@ -275,15 +286,11 @@
   //     contentType: 'application/json; charset=utf-8',
   //     data: data,
   //     dataType: 'json',
-
   // });
   //   }
-
   for (let i = 1; i < 6; i++) {
     console.log("qqqqqqqqqqqqqqqqqqqqqqq", typeof ('{{qq}}'))
-
   }
-
   console.log('{{correct_answer}}')
   function showPosition() {
     var data = { no: 700 };
@@ -296,7 +303,6 @@
       contentType: 'application/json; charset=utf-8',
       success: function (result) { console.log('hhhhhhhhhhhhhhhhhhhhhhhhhhhhffffffffffffffffffffff', result) }
     });
-
     // $.ajax({
     //   // headers: { "X-CSRFToken": token },
     //   type: 'GET',
@@ -304,19 +310,14 @@
     //   contentType: 'application/json; charset=utf-8',
     //   data: data,
     //   dataType: 'text',
-
     // });
   }
-
-
   function showNext() {
     let hh = parseInt(window.location.pathname.slice(17, 19))
     let hr = 'http://127.0.0.1:8000/levels/question/' + (hh + 1) + '/hard'
     console.log("next", typeof (hh), hr, hr + 1)
     window.location.replace(hr);
   }
-
-
 // $(function () {
 //  var liftoffTime = new Date();
 //   liftoffTime = new Date(liftoffTime.getFullYear() + 1, 1 - 1, 26);
