--- a/main_app/templates/Result.html
+++ b/main_app/templates/Result.html
@@ -23,7 +23,7 @@
               "
             >
               <i class="fas fa-sort-numeric-up mr-2 font-weight-bold"></i>Your
-              Score: {{no}}/5
+              Score: {{no}}
             </div>
           </div>
           <!-- <div
